--- a/README.rdoc
+++ b/README.rdoc
@@ -5,7 +5,9 @@ application up and running.
 
 Things you may want to cover:
 
-* Ruby version
+* Ruby version - 2.2.1
+
+* Rails version - 4.2.3
 
 * System dependencies
 
